Stworzenie pierwszej wersji GUI

--- a/www/index.html
+++ b/www/index.html
@@ -20,19 +20,28 @@
 
 		
 		  <div data-role="header">
-			<h1>Aplikacja - tutaj przyciski</h1>
+			<h1>Lista produktów</h1>
+			<button class="ui-btn ui-icon-arrow-d ui-btn-icon-left" >Zaczytaj listę</button>
+			<a href="#opcje" class="ui-btn ui-icon-bars ui-btn-icon-left">Opcje</a>
 		  </div>
 		  <div data-role="main" class="ui-content">
 			<p>
 
-			Tutaj lista
+			<!-- przykładowa lista produktów -->
+			ALL STAR BATMAN #9 <a href="#" class="ui-btn ui-corner-all ui-icon-info ui-btn-icon-notext ui-btn-inline" >Info Icon</a> <a href="#" class="ui-btn ui-corner-all ui-icon-edit ui-btn-icon-notext ui-btn-inline">Edit Icon</a> <hr>
+			ALL STAR BATMAN #9 <a href="#" class="ui-btn ui-corner-all ui-icon-info ui-btn-icon-notext ui-btn-inline" >Info Icon</a> <a href="#" class="ui-btn ui-corner-all ui-icon-edit ui-btn-icon-notext ui-btn-inline">Edit Icon</a> <hr>
+			ALL STAR BATMAN #9 <a href="#" class="ui-btn ui-corner-all ui-icon-info ui-btn-icon-notext ui-btn-inline" >Info Icon</a> <a href="#" class="ui-btn ui-corner-all ui-icon-edit ui-btn-icon-notext ui-btn-inline">Edit Icon</a> <hr>
+			ALL STAR BATMAN #9 <a href="#" class="ui-btn ui-corner-all ui-icon-info ui-btn-icon-notext ui-btn-inline" >Info Icon</a> <a href="#" class="ui-btn ui-corner-all ui-icon-edit ui-btn-icon-notext ui-btn-inline">Edit Icon</a> <hr>
+			ALL STAR BATMAN #9 <a href="#" class="ui-btn ui-corner-all ui-icon-info ui-btn-icon-notext ui-btn-inline" >Info Icon</a> <a href="#" class="ui-btn ui-corner-all ui-icon-edit ui-btn-icon-notext ui-btn-inline">Edit Icon</a> <hr>
+			ALL STAR BATMAN #9 <a href="#" class="ui-btn ui-corner-all ui-icon-info ui-btn-icon-notext ui-btn-inline" >Info Icon</a> <a href="#" class="ui-btn ui-corner-all ui-icon-edit ui-btn-icon-notext ui-btn-inline">Edit Icon</a> <hr>			
 
 			
 			
 			</p>
 		  </div>
 		  <div data-role="footer" data-position="fixed">
-			<h1>(c) Piotr Masłowski, Adrian Myszor<br>tutaj zamiast tego napisu powinny być jakieś przyciski</h1>
+			<!-- <h1>(c) Piotr Masłowski, Adrian Myszor</h1> -->
+			<button class="ui-btn ui-icon-mail ui-btn-icon-left">Wyślij raport</button>
 		  </div> 
 		</div> 
 		
