Przykładowe wyświetlanie zdjęcia

--- a/www/index.html
+++ b/www/index.html
@@ -24,18 +24,22 @@
 			<button class="ui-btn ui-icon-arrow-d ui-btn-icon-left" >Zaczytaj listę</button>
 			<a href="#opcje" class="ui-btn ui-icon-bars ui-btn-icon-left">Opcje</a>
 		  </div>
+		  
+	  
 		  <div data-role="main" class="ui-content">
 			<p>
 
 			<!-- przykładowa lista produktów -->
-			ALL STAR BATMAN #9 <a href="#" class="ui-btn ui-corner-all ui-icon-info ui-btn-icon-notext ui-btn-inline" >Info Icon</a> <a href="#" class="ui-btn ui-corner-all ui-icon-edit ui-btn-icon-notext ui-btn-inline">Edit Icon</a> <hr>
-			ALL STAR BATMAN #9 <a href="#" class="ui-btn ui-corner-all ui-icon-info ui-btn-icon-notext ui-btn-inline" >Info Icon</a> <a href="#" class="ui-btn ui-corner-all ui-icon-edit ui-btn-icon-notext ui-btn-inline">Edit Icon</a> <hr>
-			ALL STAR BATMAN #9 <a href="#" class="ui-btn ui-corner-all ui-icon-info ui-btn-icon-notext ui-btn-inline" >Info Icon</a> <a href="#" class="ui-btn ui-corner-all ui-icon-edit ui-btn-icon-notext ui-btn-inline">Edit Icon</a> <hr>
-			ALL STAR BATMAN #9 <a href="#" class="ui-btn ui-corner-all ui-icon-info ui-btn-icon-notext ui-btn-inline" >Info Icon</a> <a href="#" class="ui-btn ui-corner-all ui-icon-edit ui-btn-icon-notext ui-btn-inline">Edit Icon</a> <hr>
-			ALL STAR BATMAN #9 <a href="#" class="ui-btn ui-corner-all ui-icon-info ui-btn-icon-notext ui-btn-inline" >Info Icon</a> <a href="#" class="ui-btn ui-corner-all ui-icon-edit ui-btn-icon-notext ui-btn-inline">Edit Icon</a> <hr>
-			ALL STAR BATMAN #9 <a href="#" class="ui-btn ui-corner-all ui-icon-info ui-btn-icon-notext ui-btn-inline" >Info Icon</a> <a href="#" class="ui-btn ui-corner-all ui-icon-edit ui-btn-icon-notext ui-btn-inline">Edit Icon</a> <hr>			
+			ALL STAR BATMAN #9 <a href="#okladka" data-rel="popup" data-position-to="window" class="ui-btn ui-corner-all ui-icon-info ui-btn-icon-notext ui-btn-inline" >Zdjęcie</a> <a href="#" class="ui-btn ui-corner-all ui-icon-edit ui-btn-icon-notext ui-btn-inline">Wiadomość</a> <hr>
+			ALL STAR BATMAN #9 <a href="#okladka" data-rel="popup" data-position-to="window" class="ui-btn ui-corner-all ui-icon-info ui-btn-icon-notext ui-btn-inline" >Zdjęcie</a> <a href="#" class="ui-btn ui-corner-all ui-icon-edit ui-btn-icon-notext ui-btn-inline">Wiadomość</a> <hr>
+			ALL STAR BATMAN #9 <a href="#okladka" data-rel="popup" data-position-to="window" class="ui-btn ui-corner-all ui-icon-info ui-btn-icon-notext ui-btn-inline" >Zdjęcie</a> <a href="#" class="ui-btn ui-corner-all ui-icon-edit ui-btn-icon-notext ui-btn-inline">Wiadomość</a> <hr>
+			ALL STAR BATMAN #9 <a href="#okladka" data-rel="popup" data-position-to="window" class="ui-btn ui-corner-all ui-icon-info ui-btn-icon-notext ui-btn-inline" >Zdjęcie</a> <a href="#" class="ui-btn ui-corner-all ui-icon-edit ui-btn-icon-notext ui-btn-inline">Wiadomość</a> <hr>
+		
 
-			
+			<div data-role="popup" id="okladka">
+			      <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn ui-icon-delete ui-btn-icon-notext ui-btn-right">Zamknij</a>
+				<img src="https://www.previewsworld.com/SiteImage/CatalogImage/STL040589?type=1" style="width:400px;height:600px;" alt="ALL STAR BATMAN #9">
+			</div>
 			
 			</p>
 		  </div>
