--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
 		<script src="js/jquery-2.1.4.min.js"></script>
 		<script src="js/jquery.mobile-1.4.5.min.js"></script>
-		
+		<script src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 		
 	</head>
@@ -29,17 +29,39 @@
 		  <div data-role="main" class="ui-content">
 			<p>
 
+			
+			<div id="lista"></div>
+			<script type = "text/javascript" language = "javascript">
+
+			$('#lista').append("testuje");
+			
+			var kod = "NOV169203";
+			var id = "#"+kod;
+			var link = "https://query.yahooapis.com/v1/public/yql?q=select+src+from+html+where+url%3D%22https%3A%2F%2Fpreviewsworld.com%2FCatalog%2F"+kod+"%22+and%0A++++++xpath%3D%27%2F%2Fdiv%2Fa%2Fimg%27+LIMIT+1&format=json";
+			   
+			   			   			      $.getJSON(link, function(jd3) {
+                  $(id).html('<a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn ui-icon-delete ui-btn-icon-notext ui-btn-right">Zamknij</a><img src="https://www.previewsworld.com'+jd3.query.results.img.src+'" style="width:400px;height:600px;" alt="ALL STAR BATMAN #9">');
+				  
+
+               });
+			
+			
+			
+			
+			</script>
+			
+
 			<!-- przykładowa lista produktów -->
-			ALL STAR BATMAN #9 <a href="#okladka" data-rel="popup" data-position-to="window" class="ui-btn ui-icon-camera ui-btn-icon-left ui-btn-inline" >Zdjęcie</a> <a href="#wiadomosc" data-rel="popup" data-position-to="window" class="ui-btn ui-icon-comment ui-btn-icon-left ui-btn-inline">Wiadomość</a> <button class="ui-btn ui-icon-arrow-d ui-btn-icon-left ui-icon-check ui-btn-inline" >Produkt znaleziono</button><hr>
+			ALL STAR BATMAN #9 <a href="#NOV169203" data-rel="popup" data-position-to="window" class="ui-btn ui-icon-camera ui-btn-icon-left ui-btn-inline" >Zdjęcie</a> <a href="#wiadomosc" data-rel="popup" data-position-to="window" class="ui-btn ui-icon-comment ui-btn-icon-left ui-btn-inline">Wiadomość</a> <button class="ui-btn ui-icon-arrow-d ui-btn-icon-left ui-icon-check ui-btn-inline" >Produkt znaleziono</button><hr>
 			ALL STAR BATMAN #9 <a href="#okladka" data-rel="popup" data-position-to="window" class="ui-btn ui-icon-camera ui-btn-icon-left ui-btn-inline" >Zdjęcie</a> <a href="#wiadomosc" data-rel="popup" data-position-to="window" class="ui-btn ui-icon-comment ui-btn-icon-left ui-btn-inline">Wiadomość</a> <button class="ui-btn ui-icon-arrow-d ui-btn-icon-left ui-icon-check ui-btn-inline" >Produkt znaleziono</button><hr>
 			ALL STAR BATMAN #9 <a href="#okladka" data-rel="popup" data-position-to="window" class="ui-btn ui-icon-camera ui-btn-icon-left ui-btn-inline" >Zdjęcie</a> <a href="#wiadomosc" data-rel="popup" data-position-to="window" class="ui-btn ui-icon-comment ui-btn-icon-left ui-btn-inline">Wiadomość</a> <button class="ui-btn ui-icon-arrow-d ui-btn-icon-left ui-icon-check ui-btn-inline" >Produkt znaleziono</button><hr>
 			ALL STAR BATMAN #9 <a href="#okladka" data-rel="popup" data-position-to="window" class="ui-btn ui-icon-camera ui-btn-icon-left ui-btn-inline" >Zdjęcie</a> <a href="#wiadomosc" data-rel="popup" data-position-to="window" class="ui-btn ui-icon-comment ui-btn-icon-left ui-btn-inline">Wiadomość</a> <button class="ui-btn ui-icon-arrow-d ui-btn-icon-left ui-icon-check ui-btn-inline" >Produkt znaleziono</button><hr>
 			ALL STAR BATMAN #9 <a href="#okladka" data-rel="popup" data-position-to="window" class="ui-btn ui-icon-camera ui-btn-icon-left ui-btn-inline" >Zdjęcie</a> <a href="#wiadomosc" data-rel="popup" data-position-to="window" class="ui-btn ui-icon-comment ui-btn-icon-left ui-btn-inline">Wiadomość</a> <button class="ui-btn ui-icon-arrow-d ui-btn-icon-left ui-icon-check ui-btn-inline" >Produkt znaleziono</button><hr>
 		
 
-			<div data-role="popup" id="okladka">
-			    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn ui-icon-delete ui-btn-icon-notext ui-btn-right">Zamknij</a>
-				<img src="https://www.previewsworld.com/SiteImage/CatalogImage/STL040589?type=1" style="width:400px;height:600px;" alt="ALL STAR BATMAN #9">
+			<div data-role="popup" id="NOV169203">
+			    <!-- <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn ui-icon-delete ui-btn-icon-notext ui-btn-right">Zamknij</a> -->
+				<!-- <img src="https://www.previewsworld.com/SiteImage/CatalogImage/STL040589?type=1" style="width:400px;height:600px;" alt="ALL STAR BATMAN #9"> -->
 			</div>
 			<div data-role="popup" id="wiadomosc">
 			    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn ui-icon-delete ui-btn-icon-notext ui-btn-right">Zamknij</a>
