--- a/www/index.html
+++ b/www/index.html
@@ -44,6 +44,14 @@
 			
 			
 			
+			
+			function usun(id) {
+			
+				$('#lista').append('działa to?' + id);
+			
+			}
+			
+			
 			function pobierzListe() {
 			
 			var lista = 'https://query.yahooapis.com/v1/public/yql?q=select%20*%20from%20html%20where%20url%3D%22http%3A%2F%2Fwizard.uek.krakow.pl%2F~s181008%2Flista2.txt%22%20&format=json&diagnostics=true&callback=';
@@ -81,7 +89,7 @@
                }); //dodawanie obrazka
 			
 			
-			$('#komiks_' + num).html(nazwa + '<a href="#obrazek_'+num+'" data-rel="popup" data-position-to="window" class="ui-btn ui-icon-camera ui-btn-icon-left ui-btn-inline" >Zdjęcie</a> <a href="#wiadomosc" data-rel="popup" data-position-to="window" class="ui-btn ui-icon-comment ui-btn-icon-left ui-btn-inline">Wiadomość</a> <button class="ui-btn ui-icon-arrow-d ui-btn-icon-left ui-icon-check ui-btn-inline" >Produkt znaleziono</button><hr>'); //dodawanie komiksu
+			$('#komiks_' + num).html(nazwa + '<a href="#obrazek_'+num+'" data-rel="popup" data-position-to="window" class="ui-btn ui-icon-camera ui-btn-icon-left ui-btn-inline" >Zdjęcie</a> <a href="#wiadomosc" data-rel="popup" data-position-to="window" class="ui-btn ui-icon-comment ui-btn-icon-left ui-btn-inline">Wiadomość</a> <button class="ui-btn ui-icon-arrow-d ui-btn-icon-left ui-icon-check ui-btn-inline" onclick="usun('+num+')">Produkt znaleziono</button><hr>'); //dodawanie komiksu
 			
 
 			}
