działająca funkcja usuwania produktów

--- a/www/index.html
+++ b/www/index.html
@@ -47,12 +47,16 @@
 			
 			function usun(id) {
 			
-				$('#lista').append('działa to?' + id);
+				//$('#lista').append('działa to?' + id);
+			
+				$("#komiks_" + id).html("");
 			
 			}
 			
 			
 			function pobierzListe() {
+			
+			
 			
 			var lista = 'https://query.yahooapis.com/v1/public/yql?q=select%20*%20from%20html%20where%20url%3D%22http%3A%2F%2Fwizard.uek.krakow.pl%2F~s181008%2Flista2.txt%22%20&format=json&diagnostics=true&callback=';
 			var zawartosc;
