--- a/www/index.html
+++ b/www/index.html
@@ -76,7 +76,7 @@
 			
 
 			function raport() {
-				//cordova.plugins.email.addAlias('gmail', 'com.google.android.gm');//dodanie allisu bez tego nie można używać gmaila
+				cordova.plugins.email.addAlias('gmail', 'com.google.android.gm');//dodanie allisu bez tego nie można używać gmaila
 				//zmienne potrzebne do tworzenia maila
 				//pobieranie dzisiejszej daty
 				var dzis = new Date();
