--- a/www/index.html
+++ b/www/index.html
@@ -8,13 +8,21 @@
 		<script src="js/jquery-2.1.4.min.js"></script>
 		<script src="js/jquery.mobile-1.4.5.min.js"></script>
 		<script src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-
+		<style>
+		.alignleft {
+	float: left;
+}
+.alignright {
+	float: right;
+}
+		
+		</style>
 	</head>
 	<body onload="init()">
 		<div data-role="page" id="pageone">
 			<div data-role="header">
 				<h1>Lista produktów</h1>
-				<button onclick="cofnij()" class="ui-btn ui-corner-all ui-icon-back ui-btn-icon-notext">Cofnij</button>
+				<button class="ui-btn ui-icon-arrow-d ui-btn-icon-left " id="zaczytaj">Pobierz listę</button>
 			</div>
 		<div data-role="main" class="ui-content">
 			<p>
@@ -237,8 +245,10 @@
 		  </div>
 		  <div data-role="footer" data-position="fixed">
 			<!-- <h1>(c) Piotr Masłowski, Adrian Myszor</h1> -->
-			<button class="ui-btn ui-icon-arrow-d ui-btn-icon-left" id="zaczytaj">Zaczytaj listę</button>
-			<button class="ui-btn ui-icon-mail ui-btn-icon-left ui-btn-right" onclick="raport()">Wyślij raport</button>
+			<div class="alignleft"><button onclick="cofnij()" class="ui-btn ui-corner-all ui-icon-back ui-btn-icon-left">Cofnij</button></div>
+			
+			<div class="alignright"><button class="ui-btn ui-icon-mail ui-btn-icon-left " onclick="raport()">Wyślij raport</button></div>
+			
 		  </div> 
 		</div> 
 		
