pierwsza wersja splashscreenu oraz ikony

--- a/www/index.html
+++ b/www/index.html
@@ -21,8 +21,8 @@
 	<body onload="init()">
 		<div data-role="page" id="pageone">
 			<div data-role="header">
-				<h1>Lista produktów</h1>
 				<button class="ui-btn ui-icon-arrow-d ui-btn-icon-left " id="zaczytaj">Pobierz listę</button>
+				<h1>ATOM</h1>
 			</div>
 		<div data-role="main" class="ui-content">
 			<p>
@@ -246,7 +246,6 @@
 		  <div data-role="footer" data-position="fixed">
 			<!-- <h1>(c) Piotr Masłowski, Adrian Myszor</h1> -->
 			<div class="alignleft"><button onclick="cofnij()" class="ui-btn ui-corner-all ui-icon-back ui-btn-icon-left">Cofnij</button></div>
-			
 			<div class="alignright"><button class="ui-btn ui-icon-mail ui-btn-icon-left " onclick="raport()">Wyślij raport</button></div>
 			
 		  </div> 
