zmiana linku do listy na właściwy (nie testowy)

--- a/www/index.html
+++ b/www/index.html
@@ -196,7 +196,7 @@
 			});
 			//reszta funkcji pobierająca liste komiksów
 			
-			var lista = 'https://query.yahooapis.com/v1/public/yql?q=select%20*%20from%20html%20where%20url%3D%22http%3A%2F%2Fwizard.uek.krakow.pl%2F~s181008%2Flista2.txt%22%20&format=json&diagnostics=true&callback=';//link do listy
+			var lista = 'https://query.yahooapis.com/v1/public/yql?q=select%20*%20from%20html%20where%20url%3D%22http%3A%2F%2Fwizard.uek.krakow.pl%2F~s181008%2Flista.txt%22%20&format=json&diagnostics=true&callback=';//link do listy
 			var zawartosc;
 			var kod;
 			$.getJSON(lista , function(jd2) {
