--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
 	<body  onload="init()">
 		<div data-role="page" id="pageone">
 			<div data-role="header">
-				<button class="ui-btn ui-icon-arrow-d ui-btn-icon-left " id="zaczytaj">Pobierz listę</button>
+				<button class="ui-btn ui-icon-arrow-d ui-btn-icon-left ui-corner-all" id="zaczytaj">Pobierz listę</button>
 				<h1>ATOM</h1>
 			</div>
 		<div  data-role="main" class="ui-content">
@@ -226,7 +226,7 @@
 					$('#obrazek_' + num).html('<a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn ui-icon-delete ui-btn-icon-notext ui-btn-right">Zamknij</a><img src="https://www.previewsworld.com'+jd.query.results.img.src+'" style="width:300px;height:400px;" alt="'+kod+'">');
 				}); //dodawanie obrazka
 
-				$('#komiks_' + num).html('<b>' + nazwa + ' <b/><a href="#obrazek_'+num+'" data-rel="popup" data-position-to="window" class="ui-btn ui-icon-camera ui-btn-icon-left ui-btn-inline" >Zdjęcie</a>  <button class="ui-btn ui-icon-delete ui-btn-icon-left ui-icon-check ui-btn-inline" onclick="kasuj('+num+',0)">Brak</button><button class="ui-btn ui-icon-shop ui-btn-icon-left ui-icon-check ui-btn-inline" onclick="kasuj('+num+', 2)">Ostatni</button><button class="ui-btn ui-icon-alert ui-btn-icon-left  ui-btn-inline" onclick="kasuj('+num+', 3)">Uszkodzony</button><button class="ui-btn ui-icon-arrow-d ui-btn-icon-left ui-icon-check ui-btn-inline" onclick="usun('+num+')">Znaleziono</button><hr>'); //dodawanie komiksu
+				$('#komiks_' + num).html('<b>' + nazwa + ' <b/><a href="#obrazek_'+num+'" data-rel="popup" data-position-to="window" class="ui-btn ui-icon-camera ui-btn-icon-left ui-btn-inline ui-corner-all" >Zdjęcie</a>  <button class="ui-btn ui-icon-delete ui-btn-icon-left ui-icon-check ui-btn-inline ui-corner-all" onclick="kasuj('+num+',0)">Brak</button><button class="ui-btn ui-icon-shop ui-btn-icon-left ui-icon-check ui-btn-inline ui-corner-all" onclick="kasuj('+num+', 2)">Ostatni</button><button class="ui-btn ui-icon-alert ui-btn-icon-left  ui-btn-inline ui-corner-all" onclick="kasuj('+num+', 3)">Uszkodzony</button><button class="ui-btn ui-icon-arrow-d ui-btn-icon-left ui-icon-check ui-btn-inline ui-corner-all" onclick="usun('+num+')">Znaleziono</button><hr>'); //dodawanie komiksu
 
 			}
 			
@@ -240,7 +240,7 @@
 		  <div data-role="footer" data-position="fixed">
 			<!-- <h1>(c) Piotr Masłowski, Adrian Myszor</h1> -->
 			<div class="alignleft"><button onclick="cofnij()" class="ui-btn ui-corner-all ui-icon-back ui-btn-icon-left">Cofnij</button></div>
-			<div class="alignright"><button class="ui-btn ui-icon-mail ui-btn-icon-left " onclick="raport()">Wyślij raport</button></div>
+			<div class="alignright"><button class="ui-btn ui-icon-mail ui-btn-icon-left ui-corner-all" onclick="raport()">Wyślij raport</button></div>
 			
 		  </div> 
 		</div> 
